<resources>
    <string name="app_name">Data Capture</string>
    <string name="google_api_key">AIzaSyA5BQxfcwhCeXLkcKulvicc111ECyRzXTU</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sync">Sync</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user">Utsav Ashish Koju</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Didi_Name">Didi Name</string>
    <string name="text_week">Week</string>
    <string name="text_locality">Locality</string>
    <string name="send">Send</string>
    <string name="text_WardNo">Ward No.</string>
    <string name="text_new">New</string>
    <string name="text_previous">Previous</string>
    <string name="text_OK_Network_IUCD">OK Network IUCD</string>
    <string name="text_non_network_IUCD">Non-Network IUCD</string>
    <string name="text_OK_Network_Implant">OK Network Implant</string>
    <string name="text_non_network_Implant">Non-Network Implant</string>
    <string name="text_Pills">Pills</string>
    <string name="text_depo">Depo</string>
    <string name="text_sterilization">Sterilization</string>
    <string name="text_MA">Medical Abortion</string>
    <string name="text_contacts">Contact</string>
    <string name="text_Referral">Referral</string>
    <string name="Save">Save</string>
    <string name="Update">Update</string>
    <string name="Organisation_Unit">Organisation Unit</string>
    <string name="text_period">Period</string>
    <string name="text_reportedBy">Reported By</string>
    <string name="text_Date">Date</string>
    <string name="text_tole">Tole</string>
    <string name="text_activityType">Activity Type</string>
    <string name="text_female">Female</string>
    <string name="text_male">Male</string>
    <string name="text_pc">PC</string>
    <string name="text_children">Children</string>
    <string name="text_Service">Service</string>
    <string name="text_IUCD">IUCD</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">PSI Nepal</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about">About</string>

    <string-array name="about">
        <item>Version</item>
        <item>Official website</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="about_detail">
        <item>Version: 1.0</item>
        <item>www.psi.org.np</item>
        <item>Send us an email</item>
    </string-array>
    <string-array name="settings">
        <item>Password Settings</item>
        <item>Sync Settings</item>
        <item>Help</item>
        <item>Privacy Policy</item>
    </string-array>
    <string-array name="settings_detail">
        <item>Avoid unwanted access</item>
        <item>Manage Sync frequency</item>
        <item>Make use of me</item>
        <item></item>
    </string-array>

    <string name="title_activity_applock">Enter Pin</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
