<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".ui.fragments.DidiReport.DidiReportFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f1f1f1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView android:id="@+id/layout_orgUnit"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/Organisation_Unit" />
            <Spinner android:id="@+id/input_orgUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
            <TextView android:id="@+id/layout_week"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/text_period" />
            <Spinner android:id="@+id/input_weekNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_locality"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_locality" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_locality"
                android:background="@drawable/edt_text_bg"
                android:inputType="text"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_wardNo"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_WardNo" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_wardNo"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="20sp"
                android:id="@+id/layout_Contact"
                android:textStyle="bold"
                android:textColor="#303030"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_contacts" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_newContact"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_new" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_newContact"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_prevContact"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_previous" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_prevContact"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="20sp"
                android:id="@+id/layout_Referral"
                android:textStyle="bold"
                android:textColor="#303030"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_Referral" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refOkIUCD"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_OK_Network_IUCD" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refOkIUCD"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refNonIUCD"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_non_network_IUCD" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refNonIUCD"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refOkImplant"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_OK_Network_Implant" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refOkImplant"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refNonImplant"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_non_network_Implant" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refNonImplant"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refPills"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_Pills" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refPills"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refDepo"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_depo" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refDepo"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refSterilize"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_sterilization" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refSterilize"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <TextView android:textSize="18sp"
                android:id="@+id/layout_refMedAbort"
                android:textStyle="bold"
                android:textColor="#404040"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_MA" />
            <EditText
                android:textColor="@color/edittext_text_color"
                android:id="@+id/input_refMedAbort"
                android:background="@drawable/edt_text_bg"
                android:inputType="number"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <Button android:textColor="@color/white"
                    android:id="@+id/btn_update"
                    android:background="@drawable/btn_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Update"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
